--- a/src/app/privado/pagos/pagos.component.html
+++ b/src/app/privado/pagos/pagos.component.html
@@ -49,14 +49,21 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr *ngIf="pagos.length==0">
-								<td colspan="4" align="center">No se existen registros</td>
-							</tr>
 							<tr *ngFor="let pago of pagos">
-								<td width="25%">{{pago.formaPago}}</td>
+								<td width="25%">{{pago.formapago}}</td>
 								<td width="35%">{{pago.usuario}}</td>
 								<td width="20%">{{pago.fecha}}</td>
 								<td width="20%">{{pago.monto | currency:'USD':true}}</td>
+							</tr>
+							<tr *ngIf="loading_pg">
+								<td colspan="4">
+									<app-spinner></app-spinner>
+								</td>
+							</tr>
+							<tr *ngIf="!loading_pg && pagos.length===0">
+								<td class="text-center" colspan="4">
+									<p class="text-muted">No existen pagos</p>
+								</td>
 							</tr>
 							<tr>
 								<td width="25%"></td>
@@ -74,12 +81,13 @@
 			<!-- <card-reservas [reservas]="reservadosDb"></card-reservas> -->
 		</div>
 		<div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
-			
+
 			<div class="card mt-2">
 				<div class="card-body">
 					<h4 class="card-title">Ayuda</h4>
 					<p class="card-text">
-						No pierdas de vista los pagos que se generan con tus reservas, busca tus pagos y genera tu estadístca con las fechas que tu eljas.
+						No pierdas de vista los pagos que se generan con tus reservas, busca tus pagos y genera tu estadístca con las fechas que
+						tu eljas.
 					</p>
 				</div>
 			</div>
