--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,12 @@
 			      </li>
 			    </ul>
 			  </div>
-			  <div *ngIf="currentUser" class="d-flex flex-row-reverse w-100">
+			  <div *ngIf="chasker" class="d-flex flex-row-reverse w-100">
 			  	<div class="p-2">
 						<ul class="navbar-nav">
 						  <li class="nav-item dropdown">
 						    <a class="nav-link dropdown-toggle" style="font-size:1rem;" href="#" id="ddMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						      {{currentUser.nombre}}
+						      {{chasker.nombre}}
 						    </a>
 						    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="ddMenu">
 						      <a class="dropdown-item" [routerLink]="['/contrasena']">Cambiar Contraseña
