--- a/src/app/privado/adicional/adicional.component.html
+++ b/src/app/privado/adicional/adicional.component.html
@@ -35,6 +35,16 @@
 							</div>
 						</td>
 					</tr>
+					<tr *ngIf="loading_adi">
+						<td colspan="3">
+							<app-spinner></app-spinner>
+						</td>
+					</tr>
+					<tr *ngIf="!loading_adi && adds.length===0">
+						<td class="text-center" colspan="3">
+							<p class="text-muted">No existen adicionales</p>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div><div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
