--- a/src/app/compartido/generico/generico.component.html
+++ b/src/app/compartido/generico/generico.component.html
@@ -48,7 +48,7 @@
         <img style="height:3rem;" src="/assets/images/loading.svg" />
       </div>
       <div *ngIf="muestra">
-        <p>Tu cuenta ha sido activada correctamente, es momento de disfrutar las bondades que te ofrece Chaskiy Qurpa.</p>
+        <p>Tu cuenta ha sido activada correctamente, es momento de disfrutar las bondades que te ofrece Chaskiy.</p>
         <p>Inicia sesión dando click
           <a [routerLink]="['/login']">aquí</a>
         </p>
