--- a/src/app/publico/index/index.component.html
+++ b/src/app/publico/index/index.component.html
@@ -5,7 +5,7 @@
 			<div class="col-md-8">
 				<div class="texto">
 					<h1>Organiza ya tus reservas</h1>
-					<p>Bienvenido a Chaskiy Qurpa, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
+					<p>Bienvenido a Chaskiy, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -31,7 +31,7 @@
 					<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
 				</p>
 				<h2>Correo electrónico</h2>
-				<p>Envia a través de Chaskiy Qurpa proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+				<p>Envia a través de Chaskiy proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
 			</div>
 			<div class="col-md-4">
 				<p class="img">
