--- a/src/app/publico/login/login.component.html
+++ b/src/app/publico/login/login.component.html
@@ -8,8 +8,8 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="jumbotron">
-                  <h1 class="display-3">Bienvenido a, Chaskiy Qurpa</h1>
-                  <p class="lead">Inicia sesión y descubre las bondades de organizar las reservas de tu hospedaje a través de Chaskiy Qurpa</p>
+                  <h1 class="display-3">Bienvenido a, Chaskiy</h1>
+                  <p class="lead">Inicia sesión y descubre las bondades de organizar las reservas de tu hospedaje a través de Chaskiy</p>
                   <hr class="my-4">
                   <p>Si no tienes todavía tu cuenta crea una gratis!</p>
                   <p class="lead">
